small amount of cleanup I found